workflows/k8s/kustomize/base/ingress-kind.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: argo-192.168.0.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-server
            port:
              number: 2746
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-server
            port:
              number: 2746
